tests/outref/TCT009.ref

-- OCTO395 : Assertion failed in LP_VERIFY_STRUCTURE.C when UNARY + operator is used

select * from names where id = 2 || 3;
select * from names where id = 2 || (+3);
select * from names where '23' = 2 || 3;
select * from names where '2-3' = 2 || -3;
select * from names where '23' = 2 || (+3);
select * from names where firstname = +'abcd';
select * from names where firstname = +'Zero';
select * from names where firstname = +lastname;
select * from names where id = +3;
select * from names where id = -(-(+3));
select * from names where id = 2+(+3);
select * from names where firstname = 'Zero' || +'';
select * from names where firstname = 'Zero' || -'';
select * from names where firstname = 'Zero' || +lastname;
select * from names where firstname = 'Zero' || -lastname;

-- Note: The below queries currently work in Octo but fail with Postgres.
--       The Octo output might change once YDBOcto#304 is fixed

select * from names where firstname = 'Zero' || lastname::integer;
select * from names where firstname = 'Zero' || 'abcd'::integer;
select * from names where firstname = 'Zero' || ''::integer;
select * from names where firstname = 'Zero' or lastname::integer;
select * from names where firstname = 'Zero' or 'abcd'::integer;
select * from names where firstname = 'Zero' or ''::integer;

[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 32):

select * from names where id = 2 || 3;
                               ^
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 37):

select * from names where id = 2 || 3;
                                    ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where id = 2 || 3;
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 32):

select * from names where id = 2 || (+3);
                               ^
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where id = 2 || (+3);
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 34):

select * from names where '23' = 2 || 3;
                                 ^
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 39):

select * from names where '23' = 2 || 3;
                                      ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where '23' = 2 || 3;
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 35):

select * from names where '2-3' = 2 || -3;
                                  ^
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where '2-3' = 2 || -3;
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
Error with syntax near (line 1, column 34):

select * from names where '23' = 2 || (+3);
                                 ^
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where '23' = 2 || (+3);
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 45):

select * from names where firstname = +'abcd';
                                            ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = +'abcd';
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 45):

select * from names where firstname = +'Zero';
                                            ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = +'Zero';
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 40):

select * from names where firstname = +lastname;
                                       ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = +lastname;
3|Lord|Nikon
3|Lord|Nikon
5|Zero|Cool
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 51):

select * from names where firstname = 'Zero' || +'';
                                                  ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' || +'';
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 51):

select * from names where firstname = 'Zero' || -'';
                                                  ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' || -'';
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 50):

select * from names where firstname = 'Zero' || +lastname;
                                                 ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' || +lastname;
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type VARCHAR
Error with syntax near (line 1, column 50):

select * from names where firstname = 'Zero' || -lastname;
                                                 ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' || -lastname;
[ERROR] PATH:LINENUM DATE TIME : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' or lastname::integer;
[ERROR] PATH:LINENUM DATE TIME : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' or 'abcd'::integer;
[ERROR] PATH:LINENUM DATE TIME : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where firstname = 'Zero' or ''::integer;
